syntax = "proto3";

package stats.service.collector;

option java_package = "ru.practicum.ewm.stats.proto";

import "google/protobuf/empty.proto";
import "messages/user_action.proto";

service UserActionController{
rpc CollectUserAction(stats.message.UserActionProto) returns (google.protobuf.Empty);
}